--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -22,4 +22,4 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Run bot
-        run: python3 bot.py
+        run: python3 youtube_bot.py
