--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -15,13 +15,5 @@ jobs:
         with:
           persist-credentials: true
 
-      - name: Setup Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
-
-      - name: Install deps
-        run: pip install -r requirements.txt
-
-      - name: Run bot
+      - name: Run bot (MEGA mode)
         run: python3 youtube_bot.py
